symbolize_src = files([
  'addr2line_inlinestack.cc',
  'bytereader.cc',
  'dwarf2reader.cc',
  'dwarf3ranges.cc',
  'elf_reader.cc',
  'functioninfo.cc',
])

#symbolize_lib = static_library('symbolize', symbolize_src,
#  include_directories : [ autofdo_include_path ])

#symbolize_dep = declare_dependency(
#  link_with           : [ symbolize_lib ],
#  include_directories : [ include_directories('.') ])
